testsuite/poke.pkl/string-diag-1.pk
/* { dg-do compile } */

/* Invalid \-sequence in string.  */

defvar s = "foo\zbar"; /* { dg-error "" } */
